@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19990627
+MANIFEST for cm_tools, version t20000124
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
